--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,21 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/x.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Zwoo Bots</title>
   </head>
+
   <body>
-    <div id="app">
-      <div class="controlls">
-        <button id="connect">Connect</button>
-        <input type="text" id="id" />
-        <button id="listen">Listen</button>
-        <button id="unlisten">Unlisten</button>
-      </div>
-      <div class="targets"></div>
-      <div class="messages"></div>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
